Updated code for newer features